fix: navigation items alignment

--- a/src/components/PageHeader/header.scss
+++ b/src/components/PageHeader/header.scss
@@ -27,6 +27,7 @@
 .nav__list {
   display: flex;
   list-style: none;
+  align-items: center;
   margin: 0;
   padding: 0;
   gap: 1em;
